[package]
edition = "2024"
name = "atproto-jetstream"
version = "0.1.0"

[dependencies]
futures-util = {version = "0.3"}
paste = {version = "1"}
rustls = {version = "0.23"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
thiserror = {version = "1"}
tokio = {version = "1", features = ["sync", "rt-multi-thread", "macros"]}
tokio-tungstenite = {version = "0.26", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots"]}
tracing = {version = "0.1"}
url = {version = "2"}
zstd = {version = "0.13"}
